--- a/gnome-alsamixer/gnome-alsamixer/debian/control
+++ b/gnome-alsamixer/gnome-alsamixer/debian/control
@@ -1,7 +1,7 @@
 Source: gnome-alsamixer
 Section: sound
 Priority: optional
-Maintainer: Debian QA Group <packages@qa.debian.org>
+Maintainer: Pierangelo Mancusi <pierangelo.mancusi@gmail.com>
 Build-Depends: debhelper (>= 9), dh-autoreconf, gnome-pkg-tools, intltool, patchutils (>= 0.2.25), autotools-dev, libasound2-dev, libgnomeui-dev
 Standards-Version: 3.9.4
 
